--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -5,11 +5,13 @@
     border-radius: 0% !important;
     box-shadow: 0 0 4px 0 rgba(57, 78, 234, 0.1)
 }
+
 .card:hover {
     border-radius: 0% !important;
     text-decoration: none;
     box-shadow: 0 0 12px 0 rgba(57, 78, 234, 0.1)
 }
+
 .bar-img{
     height: 20px;
     width: 20px;
@@ -20,14 +22,16 @@
     margin: auto;
     overflow: hidden;
     width: 100% !important;
+    object-fit: cover;
 }
+
 .image-box img {
-    width: 150px !important;
+    width: 100% !important;
     transition: all 0.3s;
     display: block;
-    height: 250px !important;
     transform: scale(1);
 }
+
 .image-box:hover img {
     transform: scale(1.1);
 }
@@ -37,9 +41,9 @@
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-  }
+}
 
-  .section-title h2 {
+.section-title h2 {
     font-size: 30px;
     font-weight: 600;
     position: relative;
