Added MegaMenuDesktop toggle

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -6,6 +6,7 @@
 @import "footer.css";
 @import "megaMenu.css";
 @import "megaMenuMobile.css";
+@import "megaMenuAll.css";
 @import "navMenuDesktop.css";
 @import "navMenuMobile.css";
 @import "typo.css";
