--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -11,6 +11,8 @@
 @import "navMenuMobile.css";
 @import "typo.css";
 @import "responsive.css";
+@import "onboard.css";
+@import "common.css";
 
 body {
     background-color: #ffffff;
