--- a/src/assets/css/typo.css
+++ b/src/assets/css/typo.css
@@ -7,6 +7,15 @@
     font-weight: 400;
 }
 
+.section-title-login {
+    margin-top: 50px;
+    margin-bottom: 10px;
+    color: #051b35;
+    font-size: 30px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 600;
+}
+
 .section-title-contact{
     font-size: 18px;
     font-family: 'Roboto Condensed', sans-serif;
