--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13,6 +13,7 @@
 @import "responsive.css";
 @import "onboard.css";
 @import "common.css";
+@import "productDetails.css";
 
 body {
     background-color: #ffffff;
