Updated Nav Menu Icon

--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -12,9 +12,13 @@
     box-shadow: 0 0 12px 0 rgba(57, 78, 234, 0.1)
 }
 
-.bar-img{
+.bar-img {
     height: 20px;
     width: 20px;
+}
+
+.bar-img:hover {
+    cursor: pointer;
 }
 
 .image-box {
