--- a/src/assets/css/bigSlider.css
+++ b/src/assets/css/bigSlider.css
@@ -1,13 +1,12 @@
 .slick-dots {
-    top: 90% ;
+  top: 90%;
 }
 
-.slider-img{
-    width: 100% !important;
-    object-fit: cover;
+.slider-img {
+  width: 100% !important;
+  height: auto;
 }
 
-.slick-slide{
-    height:auto !important;      
+.slick-slide {
+  height: auto !important;
 }
-
