--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1,60 +1,63 @@
-@media (max-width: 374.98px) { 
-     .Mobile {
+@media (max-width: 374.98px) {
+  .slider-img {
+    width: 100% !important;
+    height: auto;
+  }
 
+  .Mobile {
+  }
 
-     }
-     .Desktop {
-          display: none;
-     }
+  .Desktop {
+    display: none;
+  }
 }
 
-@media (min-width: 375.98px) and (max-width: 575.98px){
-     .Mobile {
+@media (min-width: 375.98px) and (max-width: 575.98px) {
+  .slider-img {
+    width: 100% !important;
+    height: auto;
+  }
 
-     }
+  .Mobile {
+  }
 
-     .Desktop {
-          display: none;
-     }  
+  .Desktop {
+    display: none;
+  }
 }
 
-@media (min-width: 576px) and (max-width: 767.98px) { 
-     .Mobile {
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .Mobile {
+  }
 
-     }
-
-     .Desktop {
-          display: none;
-     }
+  .Desktop {
+    display: none;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
-     .Mobile {
-          display: none;
-     }
+  .Mobile {
+    display: none;
+  }
 
-     .Desktop {
-          
-     }
+  .Desktop {
+  }
 }
-
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
-     .Mobile {
-          display: none;
-     }
+  .Mobile {
+    display: none;
+  }
 
-     .Desktop {
-          
-     }
+  .Desktop {
+  }
 }
 
-@media (min-width: 1200px) { 
-     .Mobile {
-          display: none;
-     }
+@media (min-width: 1200px) {
+  .Mobile {
+    display: none;
+  }
 
-     .Desktop {
-          
-     }
+  .Desktop {
+  }
 }
