Consumed Product Details API

--- a/src/assets/css/typo.css
+++ b/src/assets/css/typo.css
@@ -63,6 +63,10 @@
 .text-link{
    color: inherit;
    text-decoration: inherit;
+
+    &:focus, &:hover, &:visited, &:link, &:active {
+        text-decoration: inherit;
+    }
 }
 
 .breadbody{
