--- a/src/assets/css/productDetails.css
+++ b/src/assets/css/productDetails.css
@@ -17,3 +17,24 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
 }
+
+.big-image {
+    height: 400px;
+} 
+
+.div-big-img {
+    display: flex;
+    justify-content: center;
+}
+
+.small-image {
+    height: 100px;
+}
+
+.product-sm-img {
+    
+}
+
+.product-sm-img:hover {
+    cursor: pointer;
+}
