Added Product Details Image Zoom

--- a/src/assets/css/productDetails.css
+++ b/src/assets/css/productDetails.css
@@ -38,3 +38,9 @@
 .product-sm-img:hover {
     cursor: pointer;
 }
+
+.detailimage{    
+    max-width: 60%;
+    height: 499px;
+    object-fit: contain;
+ }
