--- a/src/assets/css/navMenuDesktop.css
+++ b/src/assets/css/navMenuDesktop.css
@@ -3,13 +3,17 @@
     height: 40px;
 }
 
-.cart-btn{
+.cart-btn {
     padding: 5px 15px 5px 15px;
     color: #FFFFFF;
     border-radius: 20px !important;
     border:0.5px solid #051b35;
     background: #051b35 !important;
     text-decoration: none;
+}
+
+.cart-btn:hover {
+    color: #1ED760;
 }
 
 .navbar { 
